finish layout and styling

--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -21,88 +21,78 @@
           <div class="card__image-half">
             <img class="card__img" src="./images/drawers.jpg" alt="" />
           </div>
+
           <div class="card__text-half">
-            <p class="card__lead-text">
-              Shift the overall look and feel by adding these wonderful touches
-              to furniture in your home
-            </p>
-            <p class="card__main-text">
+            <a href="#">
+              <h3 class="card__title">
+                Shift the overall look and feel by adding these wonderful
+                touches to furniture in your home
+              </h3>
+            </a>
+
+            <p class="card__text">
               Ever been in a room and felt like something was missing? Perhaps
               it felt slightly bare and uninviting. I’ve got some simple tips to
               help you make any room feel complete.
             </p>
-            <div class="card__footer-section">
-              <img
-                class="card__avatar"
-                src="./images/avatar-michelle.jpg"
-                alt="Michelle Appleton's small avatar"
-              />
-              <div class="card__author-info">
-                <p class="name">Michelle Appleton</p>
-                <p class="date">28 Jun 2020</p>
-              </div>
-              <button class="card__share-btn">
+
+            <div class="card__footer">
+              <div class="card__author">
                 <img
-                  class="card__share-img"
-                  src="./images/icon-share.svg"
-                  alt="An icon to share"
+                  class="card__avatar"
+                  src="./images/avatar-michelle.jpg"
+                  alt="Michelle Appleton's small avatar"
                 />
-              </button>
-            </div>
-          </div>
 
-          <div class="card__share-section hidden">
-            <div class="card__socials-icons-container">
-              <p class="card__share-text">Share</p>
-              <a href="https://www.facebook.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-facebook.svg"
-                  alt="Facebook icon"
-              /></a>
-              <a href="https://www.x.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-twitter.svg"
-                  alt="X icon"
-              /></a>
-              <a href="https://www.pinterest.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-pinterest.svg"
-                  alt="Pinterest icon"
-              /></a>
-            </div>
-            <button class="card__share-btn card__share-btn--active">
-              <img
-                class="card__share-img card__share-img--active"
-                src="./images/icon-share.svg"
-                alt="An icon to share"
-              />
-            </button>
-          </div>
+                <div class="card__author-info">
+                  <h4 class="name">Michelle Appleton</h4>
+                  <p class="date">28 Jun 2020</p>
+                </div>
+              </div>
 
-          <div class="card__share-icons-desktop hidden">
-            <div class="card__socials-icons-container">
-              <p class="card__share-text">Share</p>
-              <a href="https://www.facebook.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-facebook.svg"
-                  alt="Facebook icon"
-              /></a>
-              <a href="https://www.x.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-twitter.svg"
-                  alt="X icon"
-              /></a>
-              <a href="https://www.pinterest.com" target="_blank"
-                ><img
-                  class="card__socials-icon"
-                  src="./images/icon-pinterest.svg"
-                  alt="Pinterest icon"
-              /></a>
+              <div class="card__share">
+                <button class="card__share-btn">
+                  <img
+                    class="card__share-img"
+                    src="./images/icon-share.svg"
+                    alt="An icon to share"
+                  />
+                </button>
+
+                <div class="card__share-options">
+                  <p class="card__share-text option-content">Share</p>
+
+                  <a
+                    class="option-content"
+                    href="https://www.facebook.com"
+                    target="_blank"
+                    ><img
+                      class="card__socials-icon"
+                      src="./images/icon-facebook.svg"
+                      alt="Facebook icon"
+                  /></a>
+
+                  <a
+                    class="option-content"
+                    href="https://www.x.com"
+                    target="_blank"
+                    ><img
+                      class="card__socials-icon"
+                      src="./images/icon-twitter.svg"
+                      alt="X icon"
+                  /></a>
+
+                  <a
+                    class="option-content"
+                    href="https://www.pinterest.com"
+                    target="_blank"
+                    ><img
+                      class="card__socials-icon"
+                      src="./images/icon-pinterest.svg"
+                      alt="Pinterest icon"
+                  /></a>
+                </div>
+              </div>
             </div>
           </div>
         </article>
