--- a/newsletter-sign-up-form/index.html
+++ b/newsletter-sign-up-form/index.html
@@ -21,51 +21,6 @@
     <script src="./src/main.js" defer type="module"></script>
   </head>
   <body>
-    <main class="main">
-      <article class="card">
-        <div class="img-half">
-          <picture>
-            <source
-              srcset="./assets/images/illustration-sign-up-desktop.svg"
-              media="(min-width: 1024px)"
-            />
-            <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
-          </picture>
-        </div>
-        <div class="text-half">
-          <div class="info">
-            <h2 class="title">Stay updated!</h2>
-            <span class="join-text">
-              Join 60,000+ product managers receiving monthly updates on:
-            </span>
-            <ul class="features">
-              <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
-                <span>Product discovery and building what matters</span>
-              </li>
-              <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
-                <span>Measuring to ensure updates are a success</span>
-              </li>
-              <li>
-                <img src="./assets/images/icon-list.svg" alt="" />
-                <span>And much more!</span>
-              </li>
-            </ul>
-          </div>
-
-          <form id="form" action="" novalidate>
-            <p>
-              <label for="email">Email address</label>
-              <input id="email" type="email" placeholder="email@company.com" />
-              <span class="error-msg hidden">Valid email required</span>
-            </p>
-            <button class="subscribe-btn btn" type="submit">
-              Subscribe to monthly newsletter
-            </button>
-          </form>
-        </div>
-      </article>
-    </main>
+    <main class="main"></main>
   </body>
 </html>
