Add button transition with pseudo element strategy

--- a/newsletter-sign-up-form/index.html
+++ b/newsletter-sign-up-form/index.html
@@ -12,7 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="./src/styles/main.css" />
+    <link rel="stylesheet" href="./src/styles/sass/main.scss" />
 
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
